Adjusted content and styling

--- a/bl-themes/achberger/css/main.css
+++ b/bl-themes/achberger/css/main.css
@@ -2557,7 +2557,7 @@ ul:not(.browser-default) > li {
 }
 
 a {
-  color: #689f38;
+  color: #7cb342;
   text-decoration: none;
   -webkit-tap-highlight-color: transparent;
 }
@@ -2620,7 +2620,7 @@ a {
 blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
-  border-left: 5px solid #6d4c41;
+  border-left: 5px solid #880e4f;
 }
 
 i {
@@ -2671,7 +2671,7 @@ video.responsive-video {
   color: #fff;
 }
 .pagination li.active {
-  background-color: #6d4c41;
+  background-color: #880e4f;
 }
 .pagination li.disabled a {
   cursor: default;
@@ -2857,7 +2857,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #6d4c41;
+  background-color: #880e4f;
 }
 .page-footer .footer-copyright {
   overflow: hidden;
@@ -3022,8 +3022,8 @@ td, th {
   border-bottom: none;
 }
 .collection .collection-item.active {
-  background-color: #689f38;
-  color: #f8fbf4;
+  background-color: #7cb342;
+  color: white;
 }
 .collection .collection-item.active .secondary-content {
   color: #fff;
@@ -3031,7 +3031,7 @@ td, th {
 .collection a.collection-item {
   display: block;
   transition: 0.25s;
-  color: #689f38;
+  color: #7cb342;
 }
 .collection a.collection-item:not(.active):hover {
   background-color: #ddd;
@@ -3050,7 +3050,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #689f38;
+  color: #7cb342;
 }
 
 .collapsible .collection {
@@ -3077,7 +3077,7 @@ td, th {
   height: 4px;
   display: block;
   width: 100%;
-  background-color: #d0e7bc;
+  background-color: #e1efd2;
   border-radius: 2px;
   margin: 0.5rem 0 1rem 0;
   overflow: hidden;
@@ -3087,11 +3087,11 @@ td, th {
   top: 0;
   left: 0;
   bottom: 0;
-  background-color: #689f38;
+  background-color: #7cb342;
   transition: width 0.3s linear;
 }
 .progress .indeterminate {
-  background-color: #689f38;
+  background-color: #7cb342;
 }
 .progress .indeterminate:before {
   content: "";
@@ -3985,7 +3985,7 @@ input[type=range] + .thumb {
 
 nav {
   color: #fff;
-  background-color: #6d4c41;
+  background-color: #880e4f;
   width: 100%;
   height: 56px;
   line-height: 56px;
@@ -4504,13 +4504,13 @@ small {
   border-radius: 0 0 2px 2px;
 }
 .card .card-action a:not(.btn):not(.btn-small):not(.btn-large):not(.btn-large):not(.btn-floating) {
-  color: #689f38;
+  color: #7cb342;
   margin-right: 24px;
   transition: color 0.3s ease;
   text-transform: uppercase;
 }
 .card .card-action a:not(.btn):not(.btn-small):not(.btn-large):not(.btn-large):not(.btn-floating):hover {
-  color: #9bcd70;
+  color: #aed388;
 }
 .card .card-reveal {
   padding: 24px;
@@ -4570,7 +4570,7 @@ small {
   text-transform: uppercase;
 }
 .tabs .tab a {
-  color: rgba(109, 76, 65, 0.7);
+  color: rgba(136, 14, 79, 0.7);
   display: block;
   width: 100%;
   height: 100%;
@@ -4581,22 +4581,22 @@ small {
   transition: color 0.28s ease, background-color 0.28s ease;
 }
 .tabs .tab a:focus, .tabs .tab a:focus.active {
-  background-color: rgba(157, 109, 94, 0.2);
+  background-color: rgba(205, 21, 119, 0.2);
   outline: none;
 }
 .tabs .tab a:hover, .tabs .tab a.active {
   background-color: transparent;
-  color: #6d4c41;
+  color: #880e4f;
 }
 .tabs .tab.disabled a, .tabs .tab.disabled a:hover {
-  color: rgba(109, 76, 65, 0.4);
+  color: rgba(136, 14, 79, 0.4);
   cursor: default;
 }
 .tabs .indicator {
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: #9d6d5e;
+  background-color: #cd1577;
   will-change: left, right;
 }
 
@@ -4716,20 +4716,20 @@ small {
 
 .btn:focus, .btn-small:focus, .btn-large:focus,
 .btn-floating:focus {
-  background-color: #4f792b;
+  background-color: #628e34;
 }
 
 .btn, .btn-small, .btn-large {
   text-decoration: none;
   color: #fff;
-  background-color: #689f38;
+  background-color: #7cb342;
   text-align: center;
   letter-spacing: 0.5px;
   transition: background-color 0.2s ease-out;
   cursor: pointer;
 }
 .btn:hover, .btn-small:hover, .btn-large:hover {
-  background-color: #74b23f;
+  background-color: #89be50;
 }
 
 .btn-floating {
@@ -4742,14 +4742,14 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #689f38;
+  background-color: #7cb342;
   border-radius: 50%;
   transition: background-color 0.3s;
   cursor: pointer;
   vertical-align: middle;
 }
 .btn-floating:hover {
-  background-color: #689f38;
+  background-color: #7cb342;
 }
 .btn-floating:before {
   border-radius: 0;
@@ -4906,7 +4906,7 @@ button.btn-floating {
   z-index: -1;
   width: 40px;
   height: 40px;
-  background-color: #689f38;
+  background-color: #7cb342;
   border-radius: 50%;
   transform: scale(0);
 }
@@ -4990,7 +4990,7 @@ button.btn-floating {
 }
 .dropdown-content li > a, .dropdown-content li > span {
   font-size: 16px;
-  color: #689f38;
+  color: #7cb342;
   display: block;
   line-height: 22px;
   padding: 14px 16px;
@@ -5337,12 +5337,12 @@ body.keyboard-focused .dropdown-content li:focus {
 }
 
 select:focus {
-  outline: 1px solid #e2f1d6;
+  outline: 1px solid #f3f8ed;
 }
 
 button:focus {
   outline: none;
-  background-color: #72ae3d;
+  background-color: #86bd4c;
 }
 
 label {
@@ -5453,8 +5453,8 @@ input[type=tel]:not(.browser-default):focus:not([readonly]),
 input[type=number]:not(.browser-default):focus:not([readonly]),
 input[type=search]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #689f38;
-  box-shadow: 0 1px 0 0 #689f38;
+  border-bottom: 1px solid #7cb342;
+  box-shadow: 0 1px 0 0 #7cb342;
 }
 input:not([type]):focus:not([readonly]) + label,
 input[type=text]:not(.browser-default):focus:not([readonly]) + label,
@@ -5469,7 +5469,7 @@ input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
 input[type=number]:not(.browser-default):focus:not([readonly]) + label,
 input[type=search]:not(.browser-default):focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #689f38;
+  color: #7cb342;
 }
 input:not([type]):focus.valid ~ label,
 input[type=text]:not(.browser-default):focus.valid ~ label,
@@ -5771,7 +5771,7 @@ textarea.materialize-textarea + label:after {
   top: 0.5rem;
 }
 .input-field .prefix.active {
-  color: #689f38;
+  color: #7cb342;
 }
 .input-field .prefix ~ input,
 .input-field .prefix ~ textarea,
@@ -5938,12 +5938,12 @@ textarea.materialize-textarea {
 [type=radio]:checked + span:after,
 [type=radio].with-gap:checked + span:before,
 [type=radio].with-gap:checked + span:after {
-  border: 2px solid #689f38;
+  border: 2px solid #7cb342;
 }
 
 [type=radio]:checked + span:after,
 [type=radio].with-gap:checked + span:after {
-  background-color: #689f38;
+  background-color: #7cb342;
 }
 
 [type=radio]:checked + span:after {
@@ -6049,8 +6049,8 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #689f38;
-  border-bottom: 2px solid #689f38;
+  border-right: 2px solid #7cb342;
+  border-bottom: 2px solid #7cb342;
   transform: rotate(40deg);
   backface-visibility: hidden;
   transform-origin: 100% 100%;
@@ -6068,7 +6068,7 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #689f38;
+  border-right: 2px solid #7cb342;
   border-bottom: none;
   transform: rotate(90deg);
   backface-visibility: hidden;
@@ -6124,8 +6124,8 @@ textarea.materialize-textarea {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #689f38;
-  background-color: #689f38;
+  border: 2px solid #7cb342;
+  background-color: #7cb342;
   z-index: 0;
 }
 [type=checkbox].filled-in.tabbed:focus + span:not(.lever):after {
@@ -6135,8 +6135,8 @@ textarea.materialize-textarea {
 }
 [type=checkbox].filled-in.tabbed:checked:focus + span:not(.lever):after {
   border-radius: 2px;
-  background-color: #689f38;
-  border-color: #689f38;
+  background-color: #7cb342;
+  border-color: #7cb342;
 }
 [type=checkbox].filled-in:disabled:not(:checked) + span:not(.lever):before {
   background-color: transparent;
@@ -6172,13 +6172,13 @@ textarea.materialize-textarea {
   height: 0;
 }
 .switch label input[type=checkbox]:checked + .lever {
-  background-color: #aabe98;
+  background-color: #bbc9ac;
 }
 .switch label input[type=checkbox]:checked + .lever:before, .switch label input[type=checkbox]:checked + .lever:after {
   left: 18px;
 }
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #689f38;
+  background-color: #7cb342;
 }
 
 .switch label .lever {
@@ -6206,7 +6206,7 @@ textarea.materialize-textarea {
   transition: left 0.3s ease, background 0.3s ease, box-shadow 0.1s ease, transform 0.1s ease;
 }
 .switch label .lever:before {
-  background-color: rgba(104, 159, 56, 0.15);
+  background-color: rgba(124, 179, 66, 0.15);
 }
 .switch label .lever:after {
   background-color: #F1F1F1;
@@ -6216,7 +6216,7 @@ textarea.materialize-textarea {
 input[type=checkbox]:checked:not(:disabled) ~ .lever:active::before,
 input[type=checkbox]:checked:not(:disabled).tabbed:focus ~ .lever::before {
   transform: scale(2.4);
-  background-color: rgba(104, 159, 56, 0.15);
+  background-color: rgba(124, 179, 66, 0.15);
 }
 
 input[type=checkbox]:not(:disabled) ~ .lever:active:before,
@@ -6283,7 +6283,7 @@ select {
   z-index: 1;
 }
 .select-wrapper input.select-dropdown:focus {
-  border-bottom: 1px solid #689f38;
+  border-bottom: 1px solid #7cb342;
 }
 .select-wrapper .caret {
   position: absolute;
@@ -6439,7 +6439,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #689f38;
+  background-color: #7cb342;
   margin-left: 7px;
   transform-origin: 50% 50%;
   transform: rotate(-45deg);
@@ -6448,7 +6448,7 @@ input[type=range] + .thumb .value {
   display: block;
   width: 30px;
   text-align: center;
-  color: #689f38;
+  color: #7cb342;
   font-size: 0;
   transform: rotate(45deg);
 }
@@ -6477,16 +6477,16 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #689f38;
+  background: #7cb342;
   transition: box-shadow 0.3s;
   -webkit-appearance: none;
-  background-color: #689f38;
+  background-color: #7cb342;
   transform-origin: 50% 50%;
   margin: -5px 0 0 0;
 }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-webkit-slider-thumb {
-  box-shadow: 0 0 0 10px rgba(104, 159, 56, 0.26);
+  box-shadow: 0 0 0 10px rgba(124, 179, 66, 0.26);
 }
 
 input[type=range] {
@@ -6510,7 +6510,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #689f38;
+  background: #7cb342;
   transition: box-shadow 0.3s;
   margin-top: -5px;
 }
@@ -6521,7 +6521,7 @@ input[type=range]:-moz-focusring {
 }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-moz-range-thumb {
-  box-shadow: 0 0 0 10px rgba(104, 159, 56, 0.26);
+  box-shadow: 0 0 0 10px rgba(124, 179, 66, 0.26);
 }
 
 input[type=range]::-ms-track {
@@ -6546,12 +6546,12 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #689f38;
+  background: #7cb342;
   transition: box-shadow 0.3s;
 }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-ms-thumb {
-  box-shadow: 0 0 0 10px rgba(104, 159, 56, 0.26);
+  box-shadow: 0 0 0 10px rgba(124, 179, 66, 0.26);
 }
 
 /***************
@@ -6576,12 +6576,12 @@ input[type=range]::-ms-thumb {
 .table-of-contents a:hover {
   color: #a8a8a8;
   padding-left: 15px;
-  border-left: 1px solid #6d4c41;
+  border-left: 1px solid #880e4f;
 }
 .table-of-contents a.active {
   font-weight: 500;
   padding-left: 14px;
-  border-left: 2px solid #6d4c41;
+  border-left: 2px solid #880e4f;
 }
 
 .sidenav {
@@ -6640,10 +6640,10 @@ input[type=range]::-ms-thumb {
   color: #343434;
 }
 .sidenav li > a.btn:hover, .sidenav li > a.btn-small:hover, .sidenav li > a.btn-large:hover {
-  background-color: #74b23f;
+  background-color: #89be50;
 }
 .sidenav li > a.btn-floating:hover {
-  background-color: #689f38;
+  background-color: #7cb342;
 }
 .sidenav li > a > i, .sidenav li > a > [class^=mdi-], .sidenav li > a li > a > [class*=mdi-], .sidenav li > a > i.material-icons {
   float: left;
@@ -6746,7 +6746,7 @@ input[type=range]::-ms-thumb {
 }
 .sidenav .collapsible-body > ul:not(.collapsible) > li.active,
 .sidenav.sidenav-fixed .collapsible-body > ul:not(.collapsible) > li.active {
-  background-color: #6d4c41;
+  background-color: #880e4f;
 }
 .sidenav .collapsible-body > ul:not(.collapsible) > li.active a,
 .sidenav.sidenav-fixed .collapsible-body > ul:not(.collapsible) > li.active a {
@@ -6829,7 +6829,7 @@ input[type=range]::-ms-thumb {
   width: 100%;
   height: 100%;
   opacity: 0;
-  border-color: #689f38;
+  border-color: #7cb342;
 }
 
 .spinner-blue,
@@ -7414,7 +7414,7 @@ input[type=range]::-ms-thumb {
   position: absolute;
   font-size: 1rem;
   border-radius: 50%;
-  background-color: #6d4c41;
+  background-color: #880e4f;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.14), 0 10px 50px 0 rgba(0, 0, 0, 0.12), 0 30px 10px -20px rgba(0, 0, 0, 0.2);
   width: 100%;
   height: 100%;
@@ -7588,8 +7588,8 @@ input[type=range]::-ms-thumb {
   border-radius: 50%;
   display: block;
   cursor: pointer;
-  background: #689f38;
-  color: #689f38;
+  background: #7cb342;
+  color: #7cb342;
 }
 
 /* Custom Stylesheet */
@@ -7655,7 +7655,7 @@ p {
 }
 @media only screen and (max-width : 600px) {
   #index-banner {
-    background-color: #b18a7c;
+    background-color: #c2185b;
     min-height: 280px;
   }
   #index-banner img {
@@ -7681,7 +7681,7 @@ p {
   }
 }
 .secondary-text {
-  color: #689f38;
+  color: #7cb342;
 }
 
 .icon-block {
@@ -7697,7 +7697,7 @@ footer.page-footer {
 }
 footer.page-footer .container .row {
   display: flex;
-  align-items: flex-end;
+  align-items: flex-start;
   flex-flow: row wrap;
   justify-content: space-between;
 }
