--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -203,3 +203,15 @@ img {
     height: 100%;
   }
 }
+
+.page-content > ul {
+  padding-left: 40px;
+  & > li {
+    list-style-type: square;
+  }
+}
+
+table.striped th {
+  padding-right: 12px;
+  text-align: right;
+}
